# nova-dashboard

./: .env.sample  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-test.yml  nova-dashboard.yml
dockerfiles/: Dockerfile  nginx.conf.template
scripts/: entrypoint.sh
src/launcher_app/: auth.py  galaxy.py  issue.py  models.py  settings.py  urls.py  views.py
src/launcher_app/migrations/: 0003_delete_oauthsessionstate.py
src/vue/: vite.config.js
src/vue/src/: App.vue  main.js
src/vue/src/assets/js/: alerts.js
src/vue/src/components/: ActiveToolsPanel.vue  BugPanel.vue  CitationPanel.vue  HelpPanel.vue  InfoPanel.vue  NotificationPanel.vue  PreferencesPanel.vue  StatusPanel.vue  ToolListItem.vue  ToolStatus.vue
src/vue/src/layouts/: DesktopLayout.vue  MobileLayout.vue
src/vue/src/router/: index.js
src/vue/src/stores/: job.js  user.js
src/vue/src/views/: CategoryView.vue  HomeView.vue  LaunchView.vue  NotFoundView.vue
